try to fix release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
 
   workflow_dispatch:
 
+concurrency:
+  group: release-${{ github.run_id }}
+  cancel-in-progress: false
+
 env:
   CARGO_TERM_COLOR: always
 
